refactor(query): remove PromQL support
